# DocxReader

./: .gitignore  CMakeLists.txt
include/: docxdocument.h  zipfile.h
src/: docxdocument.cpp  zipfile.cpp
